Finished the last bits and pieces :) added the delivery charge, fixed the bug with disappearing menu when screen width is increased over 450px, removed unneeded code and made js more readable

--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ row-gap:20px;
 }
 .orderItems h2{
     margin-left:10%;
-    width:200px;
+    width:400px;
 }
 
 /*ORDER_DETAILS*/
